--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -23,7 +23,7 @@ websocket = ["dep:async-tungstenite", "dep:ws_stream_tungstenite", "dep:http"]
 proxy = ["dep:async-http-proxy"]
 
 [dependencies]
-futures-util = { version = "0.3", default_features = false, features = ["std", "sink"] }
+futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
 tokio = { version = "1.36", features = ["rt", "macros", "io-util", "net", "time", "sync"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 bytes = "1.5"
@@ -34,12 +34,12 @@ linked-hash-map = "0.5"
 
 # Optional
 # rustls
-tokio-rustls = { version = "0.25.0", optional = true }
+tokio-rustls = { version = "0.26.0", optional = true }
 rustls-webpki = { version = "0.102.2", optional = true }
 rustls-pemfile = { version = "2.1.0", optional = true }
-rustls-native-certs = { version = "0.7.0", optional = true }
+rustls-native-certs = { version = "0.8.0", optional = true }
 # websockets
-async-tungstenite = { version = "0.25.0", default-features = false, features = ["tokio-rustls-native-certs"], optional = true }
+async-tungstenite = { version = "0.28.0", default-features = false, features = ["tokio-rustls-native-certs"], optional = true }
 ws_stream_tungstenite = { version= "0.13.0", default-features = false, features = ["tokio_io"], optional = true }
 http = { version = "1.0.0", optional = true }
 # native-tls
