--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -14,7 +14,7 @@ futures = { version = "0.3", features = ["compat"] }
 itoa = "1.0"
 pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }
 pretty_env_logger = "0.5"
-rumqttc = { path = "../rumqttc" }
+rumqttc = { path = "../rumqttc" , package = "rumqttc-dev-patched"}
 rumqttd = { path = "../rumqttd" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
