--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rumqttc"
-version = "0.24.0"
+name = "rumqttc-dev-patched"
+version = "0.24.6-ack-notify"
 publish = true
 description = "An efficient and robust mqtt client for your connected devices"
 keywords = ["mqtt", "iot", "coap", "http"]
